# tidy_dvms

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_events_dataframe.py
scripts/: try_dvms.py
src/tidy_dvms/: __init__.py  client.py  py.typed  transform.py  transformers.py
src/tidy_dvms/physical_splits/: transform_physical_splits.py
src/tidy_dvms/physical_total/: transform_physical_total.py
src/tidy_dvms/tracking/: transform_tracking.py
tests/: test_client_lineups.py  test_smoke.py
